@@ -74,7 +74,7 @@ CONTAINS
       WRITE( stdout, "(a)" ) '              =                                            ='
       WRITE( stdout, "(a)" ) '              =     *** WanT *** Wannier Transport Code    ='
       WRITE( stdout, "(a)" ) '              =        (www.wannier-transport.org)         ='
-      WRITE( stdout, "(a)" ) '              =       Norm Conserv. Pseudopot. Impl.       ='
+      WRITE( stdout, "(a)" ) '              =      Ultra Soft Pseudopotential Implem.    ='
       WRITE( stdout, "(a)" ) '              =                                            ='
       WRITE( stdout, "(2x,70('='),2/ )" ) 
       WRITE(stdout, FMT='(2x,"Program <",a,">  v. ",A5,"  starts ..." )') &
