@@ -4,7 +4,9 @@
 =======================================================
 
 
-21 Mar 2005      DFT data filename written in output corrected. (AF)
+21 Mar 2005      DFT data filename written in output corrected. 
+                 Timing modified in order to avoid initializations in derived types (not f90 std).
+                 PGI compatibility checked. (AF)
 
 18 Mar 2005      Fixed a bug in ions.f90: different atomic species were not properly
                  treated. (AF)
